# consumer-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
consumer_agents/: __init__.py  cli.py
consumer_agents/agents/: behavior.py  decision.py  loop.py  reflection.py  scheduler.py
consumer_agents/datalake/: events.py  queries.py  snapshots.py
consumer_agents/personas/: __init__.py  dna.py
consumer_agents/scenarios/: knobs.py  runner.py  schema.py
consumer_agents/world/: calendar.py  catalog.py  catalog_loader.py  life_events.py  macro.py
docs/: SPEC.md
examples/: baseline.yaml  baseline_1day.yaml  baseline_first_person.yaml  baseline_no_reflections.yaml  electronics_shock.yaml
notebooks/: 01_explore_run.ipynb  02_compare_runs.ipynb  03_blog_figures.ipynb
personas/: elena.yaml  maya.yaml  raj.yaml
tests/: test_catalog.py  test_dna.py  test_smoke.py
world/: catalog_seed_dining.yaml  catalog_seed_electronics.yaml  catalog_seed_groceries.yaml  life_events_vocab.yaml  retailers.yaml
