[project]
name = "consumer-agents"
version = "0.1.0"
description = "Open source agent simulation engine: synthetic consumers with structured DNA living in a retail world"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "consumer-agents contributors" }]

dependencies = [
  "anthropic>=0.40.0",
  "pydantic>=2.6",
  "duckdb>=1.0",
  "pyarrow>=15",
  "typer>=0.12",
  "pyyaml>=6.0",
  "rich>=13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
consumer-agents = "consumer_agents.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["consumer_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501: handled by line-length=100 + word-wrap tolerance
# E741: `O` is the standard Big Five trait letter (Openness)
# B008: typer-idiomatic — typer.Argument/Option in defaults
ignore = ["E501", "E741", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
